exports[`RequestPage renders without crashing - after a test is selected, geneList defined 1`] = `
<div>
  <h4>
    Web Test Request
  </h4>
  <div
    className="form-group">
    <label
      className="control-label"
      htmlFor={undefined}>
      Name
    </label>
    <input
      className="form-control"
      id={undefined}
      name="name"
      onChange={undefined}
      placeholder="Hello World"
      type="text" />
  </div>
  <div
    className="form-group">
    <label
      className="control-label"
      htmlFor={undefined}>
      Available Test List
    </label>
    <select
      className="form-control"
      id={undefined}
      name="test"
      onChange={undefined}
      placeholder="Select test"
      type={undefined}>
      <option
        value="test1">
        test1
      </option>
      <option
        value="test2">
        test2
      </option>
      <option
        value="test3">
        test3
      </option>
    </select>
  </div>
  <div
    className="form-group">
    <label
      className="control-label"
      htmlFor={undefined}>
      Gene List
    </label>
    <select
      className="form-control"
      id={undefined}
      name="geneList"
      placeholder="Select gene list"
      type={undefined}>
      <option
        value="xxx1">
        xxx1
      </option>
      <option
        value="xxx2">
        xxx2
      </option>
    </select>
  </div>
  <button
    className="btn btn-success"
    disabled={false}
    onClick={undefined}
    type="submit">
    Submit Request
  </button>
</div>
`;

exports[`RequestPage renders without crashing - initial state with empty geneList 1`] = `
<div>
  <h4>
    Web Test Request
  </h4>
  <div
    className="form-group">
    <label
      className="control-label"
      htmlFor={undefined}>
      Name
    </label>
    <input
      className="form-control"
      id={undefined}
      name="name"
      onChange={undefined}
      placeholder="Hello World"
      type="text" />
  </div>
  <div
    className="form-group">
    <label
      className="control-label"
      htmlFor={undefined}>
      Available Test List
    </label>
    <select
      className="form-control"
      id={undefined}
      name="test"
      onChange={undefined}
      placeholder="Select test"
      type={undefined}>
      <option
        value="test1">
        test1
      </option>
      <option
        value="test2">
        test2
      </option>
      <option
        value="test3">
        test3
      </option>
    </select>
  </div>
  <div
    className="form-group">
    <label
      className="control-label"
      htmlFor={undefined}>
      Gene List
    </label>
    <select
      className="form-control"
      id={undefined}
      name="geneList"
      placeholder="Select gene list"
      type={undefined} />
  </div>
  <button
    className="btn btn-success"
    disabled={false}
    onClick={undefined}
    type="submit">
    Submit Request
  </button>
</div>
`;
